# supply-chain-vulnerabilities

./: .gitignore  README.md  notes.txt
.github/workflows/: backend.yml  demo-backend.yml  python-publish.yml
awesome_mathutils/: awesome_mathutils.py  setup.py
awesome_requests/: awesome_requests.py  pyproject.toml
examples/: pickles.py
safe_mattyt/: README.md  pyproject.toml
slide_examples/: exmples.sh  hook_exfiltrate.yml  malicious_preinstall.js
slide_examples/demo/: attack.sh
slide_examples/demo/bootstrap/: pyproject.toml
slide_examples/demo/bootstrap/mattsbackend/: build.py
slide_examples/demo/example_package/: pyproject.toml
slide_examples/demo/example_package/example_package/: __init__.py
slide_examples/demo/mattsbackend/: pyproject.toml
slide_examples/demo/mattsbackend/mattsbackend/: build.py
slide_examples/demo/v0/: pyproject.toml
slide_examples/demo/v0/mattsbackend/: build.py
