[project]
name = "awesome_requests"
version = "0.0.0"
description = "Awesome requests utilities"
authors = [
    { name = "Matthew Taylor" }
]
requires-python = ">=3.11"
dependencies = [ "mattyt", "flask", "requests" ]


[tool.uv.sources]
# Override the default source for flask with main git branch
flask = { git = "https://github.com/pallets/flask", rev = "2c1b30d0503cfb064f1cb252e6614a06915a362a" }

# hint: https://docs.astral.sh/uv/concepts/projects/dependencies/#dependency-sources

